fix up navigation alignment

--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -31,12 +31,8 @@
 }
 
 .header__logo-container {
-  max-width: 250px;
+  width: 15%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-}
-
-.header__navigation {
-  text-align: right;
 }
